fix(graph): fixed graph legend issue with always visible scrollbar, fixes #6828

--- a/public/sass/components/_panel_graph.scss
+++ b/public/sass/components/_panel_graph.scss
@@ -87,6 +87,7 @@
 .graph-legend-table {
   overflow-y: auto;
   overflow-x: hidden;
+  display: table;
 
   .graph-legend-series {
     display: table-row;
